# ongleam.study.test-driven-development

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
appendix/: README.md
appendix/fibonacci/: README.md  fibonacci.py  test_fibonacci.py
appendix/influence_diagrams/: README.md
part01/: README.md
part01/ch01/: README.md  __init__.py  currency.py  test_currency.py
part01/ch02/: README.md  __init__.py  currency.py  test_currency.py
part01/ch03/: README.md  __init__.py  currency.py  test_currency.py
part01/ch04/: README.md  __init__.py  currency.py  test_currency.py
part01/ch05/: README.md  __init__.py  currency.py  test_currency.py
part01/ch06/: README.md  __init__.py  currency.py  test_currency.py
part01/ch07/: README.md  __init__.py  currency.py  test_currency.py
part01/ch08/: README.md  __init__.py  currency.py  test_currency.py
part01/ch09/: README.md  __init__.py  currency.py  test_currency.py
part01/ch10/: README.md  __init__.py  currency.py  test_currency.py
part01/ch11/: README.md  __init__.py  currency.py  test_currency.py
part01/ch12/: README.md  __init__.py  currency.py  test_currency.py
part01/ch13/: README.md  __init__.py  currency.py  test_currency.py
part01/ch14/: README.md  __init__.py  currency.py  test_currency.py
part01/ch15/: README.md  __init__.py  currency.py  test_currency.py
part01/ch16/: README.md  __init__.py  currency.py  test_currency.py
part01/ch17/: README.md  __init__.py  currency.py  test_currency.py
part01/tests/: test_currency.py
part02/: README.md  __init__.py
part03/: README.md
(+44 files in other folders)
