[project]
name = "ongleam-study-tdd"
version = "0.1.0"
description = "TDD Practice Repository based on Kent Beck's 'Test-Driven Development: By Example'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E721",  # type() 비교 허용 (Kent Beck TDD 책 예제 따름)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["part01"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
